# api

./: .gitignore  README.md  model.py  pyproject.toml
data/: load_data.py  sample.csv
tests/: test_load_data.py
